--- a/app.yaml
+++ b/app.yaml
@@ -15,6 +15,10 @@ handlers:
   static_dir: _generated_media
   secure: optional
 
+- url: /favicon.ico
+  static_files: favicon.ico
+  upload: favicon.ico
+
 - url: /.*
   script: common/appenginepatch/main.py
   secure: optional
