--- a/index.yaml
+++ b/index.yaml
@@ -21,3 +21,8 @@ indexes:
 # manually, move them above the marker line.  The index.yaml file is
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
+
+- kind: pingpong_player
+  properties:
+  - name: owner
+  - name: name
