Wired up the main view/template.

--- a/index.yaml
+++ b/index.yaml
@@ -26,3 +26,9 @@ indexes:
   properties:
   - name: owner
   - name: name
+
+- kind: pingpong_player
+  properties:
+  - name: owner
+  - name: ranking_points
+  - name: name
