Doubles games are now properly supported.

--- a/index.yaml
+++ b/index.yaml
@@ -25,10 +25,36 @@ indexes:
 - kind: pingpong_player
   properties:
   - name: owner
+  - name: doubles_ranking_points
+  - name: name
+
+- kind: pingpong_player
+  properties:
+  - name: owner
+  - name: doubles_ranking_points
+    direction: desc
+  - name: name
+
+- kind: pingpong_player
+  properties:
+  - name: owner
   - name: name
 
 - kind: pingpong_player
   properties:
   - name: owner
   - name: ranking_points
+  - name: name
+
+- kind: pingpong_player
+  properties:
+  - name: owner
+  - name: singles_ranking_points
+  - name: name
+
+- kind: pingpong_player
+  properties:
+  - name: owner
+  - name: singles_ranking_points
+    direction: desc
   - name: name
