Introduced PlayerGame entity type, to cater for better selection of games by player.

--- a/index.yaml
+++ b/index.yaml
@@ -74,3 +74,9 @@ indexes:
   - name: singles_ranking_points
     direction: desc
   - name: name
+
+- kind: pingpong_playergame
+  properties:
+  - name: player
+  - name: date_played
+    direction: desc
