Added and configured gaebar app for backup/restore.

--- a/app.yaml
+++ b/app.yaml
@@ -11,6 +11,9 @@ handlers:
   secure: optional
   login: admin
 
+- url: /gaebar/static
+  static_dir: gaebar/static
+
 - url: /media
   static_dir: _generated_media
   secure: optional
