--- a/app.yaml
+++ b/app.yaml
@@ -25,6 +25,10 @@ handlers:
   static_files: favicon.ico
   upload: favicon.ico
 
+- url: /robots.txt
+  static_files: robots.txt
+  upload: robots.txt
+
 - url: /.*
   script: common/appenginepatch/main.py
   secure: optional
